--- a/materials/1-workshop1/0-welcome/index.qmd
+++ b/materials/1-workshop1/0-welcome/index.qmd
@@ -1,9 +1,14 @@
 ---
 title: "Welcome to the workshop"
+format:
+  html:
+    toc: true
 ---
 
 > Get to know your neighbors and instructors and learn what to expect from this workshop
 
+
+## Slides
 [Make slides full screen](slides.qmd)
 
 ```{=html}
