--- a/materials/1-workshop1/3-tidyverse-101/_01_pen_and_paper.qmd
+++ b/materials/1-workshop1/3-tidyverse-101/_01_pen_and_paper.qmd
@@ -5,7 +5,7 @@ subtitle: "<em>reproduced from a Schmidt Science Fellowship activity, thanks to 
 
 \
 
-## Activity
+## Data Visualization Activity
 
 > Patterns are the essence of data exploration and our eyes' ability to pick them out is integral to data understanding. Much of the data we work with, however, do not have a natural form and we need to make decisions about how they are to be represented. Try different ways to visualize the datasets so meaningful patterns may be found.  
 
