--- a/materials/1-workshop1/3-tidyverse-101/index.qmd
+++ b/materials/1-workshop1/3-tidyverse-101/index.qmd
@@ -1,14 +1,18 @@
 ---
 title: "Intro to R, RStudio, and Quarto"
+format:
+  html:
+    toc: true
 ---
 
 > Let's learn how to use RStudio to run R code and render documents with Quarto.
 
+
+## Slides
 [Make slides full screen](slides.qmd)
 
 ```{=html}
 <iframe class="slide-deck" src="slides.html" height="420" width="747" style="border: 1px solid #2e3846;"></iframe>
 ```
 
-
-[Go to exercise](exercise_1.qmd)
+{{< include _01_pen_and_paper.qmd >}}
