--- a/materials/1-workshop1/3-tidyverse-101/index.qmd
+++ b/materials/1-workshop1/3-tidyverse-101/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Intro to R, RStudio, and Quarto"
+title: "Intro to data visualization with the <pre>tidyverse</pre>"
 format:
   html:
     toc: true
