--- a/materials/1-workshop1/0-welcome/slides.qmd
+++ b/materials/1-workshop1/0-welcome/slides.qmd
@@ -121,19 +121,20 @@ We've created a true-to-life "medium dimensional" dataset that we'll use for all
 - three time points (before treatment, after treatment, and longer follow-up)
 - several measurements per time-point
 
-We've also created group datasets so you can practice applying what you've learned on new data.
+We've also created group datasets so you can practice applying what you've learned on new data.  
+
+{{< include ../_wooclap.qmd >}}  
 
 ## The content of this workshop
 
-We've created 7 modules as well as a group activity for this workshop. This is probably too much material to get through in this week!  
-
-As instructors we're going to be trying to teach at the right pace to keep everyone learning all week. The materials will stay on the website forever for you to work through at your own pace!
-
-##
-:::{style="text-align:center"}
-{{< fa clone size=5x >}}
+:::{style="font-size: 1.2em"}
+We've created 7 modules as well as a group activity for this workshop.  
+\
+This is probably too much material to get through in this week!  
+\
+As instructors we're going to be trying to teach at the right pace to keep everyone learning all week.  
+\
+The materials will stay on the website forever for you to work through at your own pace.  
 :::
 
-\
-
-On your way out the door for lunch, please write on a [**blue**]{style="color: DarkTurquoise"} sticky note one that confused or frustrated you and on a [**pink**]{style="color: HotPink"} sticky something that you enjoyed, or got your excited.
+{{< include ../_wooclap.qmd >}}  
