--- a/resources.qmd
+++ b/resources.qmd
@@ -219,6 +219,7 @@ Horst](https://github.com/allisonhorst/stats-illustrations) - CC BY 4.0
 ***
     
 ### Markdown & R Markdown
+*Note: We are teaching Quarto which is the new supported way of doing markdown + R, but its is almost enteriely compatible with `R Markdown` so much of this will still apply.  
 - [R Markdown from RStudio](https://rmarkdown.rstudio.com/lesson-1.html) - Getting started with `R Markdown`.
 - [R Markdown Cookbook](https://bookdown.org/yihui/rmarkdown-cookbook/) - `R Markdown` is a powerful tool for combining analysis and reporting into the same document.  This book provides practical and short examples to show the interesting and useful usage of R Markdown.
 - [R Markdown: The Definitive Guide](https://bookdown.org/yihui/rmarkdown/) - An online reference book for `R Markdown`.  And provides a detailed reference on the built-in `R Markdown` output formats of the `rmarkdown` package, as well as several other extension packages.
@@ -228,20 +229,7 @@ Horst](https://github.com/allisonhorst/stats-illustrations) - CC BY 4.0
 - [List of featured books written with **bookdown**](https://bookdown.org/) -  A list of *featured* books published to [bookdown.org](https://bookdown.org/). Click [here](https://bookdown.org/home/archive/?s=09) for a list generated automatically and roughly ordered by date.
 - [RMarkdown Tips and Tricks](https://indrajeetpatil.github.io/RmarkdownTips/) - A collection of tweets by [Indrajeet Patil](https://github.com/IndrajeetPatil) containing tips and tricks related to [R Markdown](https://rmarkdown.rstudio.com/).
 
-***    
-    
-### Anti-R
-- [jamovi](https://www.jamovi.org/) - A free and open-source point-and-click statistical program.  jamovi is built on top of the `R` statistical language making it easy to access the code underneath for your analysis. 
-- [JASP](https://jasp-stats.org/) - JASP is an open-source statistical package that uses a graphical interface to facilitate both Bayesian and Frequentist analyses.
-- [sandbox.bio](https://sandbox.bio/) - An interactive tool for learning bioinformatics command-line tools like bedtools, bowtie2, and samtools right from inside your web browser.
-- [Polygenic Risk Score (PRS) Tutorial](https://choishingwan.github.io/PRS-Tutorial/) - This tutorial provides a step-by-step guide to performing basic polygenic risk score (PRS) analyses.
-- [R Graphical User Interface Comparison](https://www.r-bloggers.com/2022/02/r-graphical-user-interface-comparison/) - A comparison of Graphical User interfaces for `R` posted on February 9, 2022 by Bob Muenchen in R bloggers.
- - [GrENEPipe](https://github.com/moiexpositoalonsolab/grenepipe) - Snakemake pipeline for variant calling from raw sample sequences.  One command to run the whole pipeline with many tools to choose from for each step.
- - [iDEP: Integrated Differential Expression and Pathway analysis](http://bioinformatics.sdstate.edu/idep/) - Web interface for end-to-end bulk RNA-seq analysis.  Use it for basic QC thru pathway analysis and more.  See the helpful [YouTube tutorial video](https://www.youtube.com/watch?v=Hs5SamHHG9s).
- - [ICARUS: Interactive single Cell RNA-seq Analysis with R shiny Using Seurat](https://launch.icarus-scrnaseq.cloud.edu.au/app/ICARUS) - A web application designed to guide the user through single cell RNA-seq analysis using the [Seurat scRNA-seq analysis toolkit](https://www.satijalab.org/seurat/) via a tutorial style interface.  Its purpose is to allow the user to interactively visualize single cell RNA-seq data without the requirement of previous R programming knowledge.
- - [reticulate](https://rstudio.github.io/reticulate/) - The `reticulate` package provides a comprehensive set of tools for interoperability between Python and `R`. 
-
-***    
+***  
     
 ### Shiny
 - [Shiny from RStudio](https://shiny.rstudio.com/) - Get started with `Shiny`, an `R` package to build interactive web apps straight from `R`.
