--- a/materials/1-workshop1/7-custom-data-visualizations/color_scales_slides.qmd
+++ b/materials/1-workshop1/7-custom-data-visualizations/color_scales_slides.qmd
@@ -950,6 +950,6 @@ help
 :::
 
 # Exercise 
-Go to [**(NEEDS UPDATE)** https://elsherbini.github.io/AMNH_R_Workshop_2023/modules/data-wrangling-module/](https://elsherbini.github.io/AMNH_R_Workshop_2023/modules/data-wrangling-module/) and complete the color scales exercise.
+Go to [https://elsherbini.github.io/durban-data-science-for-biology/materials/1-workshop1/7-custom-data-visualizations/#coding-exercise-7.1](https://elsherbini.github.io/durban-data-science-for-biology/materials/1-workshop1/7-custom-data-visualizations/#coding-exercise-7.1) and complete the color scales exercise.
 
 
